# armchair-arena

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.sh
app/: __main__.py  analytics.py  config.py  db.py  firecrawl.py  main.py  ollama.py  runner.py  tools.py
static/: analytics.html  analytics.js  app.js  index.html  manage.js  style.css
systemd/: armchair-arena.service
