[project]
name = "armchair-arena"
version = "0.1.0"
description = "Judge LLMs from your armchair — a tiny self-hosted arena for evaluating models on real-world (non-coding) tasks by speed, token cost, and your own subjective vote, with shared web-research tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
